# Reasoning-Engine-CoT

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.github/actions/setup-python-env/: action.yml
docs/: index.md  modules.md
eval/: __init__.py  questions.jsonl  suites.py
notebooks/: 01_data_exploration.ipynb  02_training_experiment.ipynb  03_evaluation_metrics.ipynb
scripts/: adherence_smoke.py  download_model.py  evaluate.py  run_ui.py
src/reasoning_engine_cot/: __init__.py
src/reasoning_engine_cot/data/: __init__.py  curriculum.py  downloader.py  filters.py  formatter.py  preference_builder.py
src/reasoning_engine_cot/eval/: __init__.py  metrics.py
src/reasoning_engine_cot/inference/: __init__.py  generator.py  loader.py
src/reasoning_engine_cot/langchain/: __init__.py  llm.py
src/reasoning_engine_cot/training/: __init__.py  config.yaml  config_schema.py  dpo_trainer.py  fine_tune.py  stages.py
src/reasoning_engine_cot/ui/: __init__.py  app.py
tests/: test_config_schema.py  test_curriculum.py  test_evaluate_utils.py  test_filters.py  test_formatter.py  test_loader_adapters.py  test_metrics.py  test_parser.py  test_semantic_matcher.py  test_stages.py  test_suites.py
